Add sass to gulp task

--- a/style/scss/main.scss
+++ b/style/scss/main.scss
@@ -48,3 +48,13 @@ p {
     text-align: center;
     font-size: 15px;
 }
+.text-box {
+    width: 75px;
+    font-family: 'Source Sans Pro, sans-serif';
+    text-align: center;
+}
+
+.testing-class{
+  color: black;
+  font-size: 10px;
+}
