--- a/style/main.css
+++ b/style/main.css
@@ -1,20 +1,3 @@
-.funds-allocated-meter .background {
-  fill: #E6E7E8; }
-
-.funds-allocated-meter .foreground {
-  fill: #00D2B6; }
-
-.funds-allocated-meter text.percent-complete {
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 40px;
-  fill: #5B8BE3;
-  letter-spacing: -.03em; }
-
-.funds-allocated-meter text.description {
-  font-family: 'Source Sans Pro', sans-serif;
-  font-size: 11px;
-  fill: #9B9B9B; }
-
 body {
   font: 10px sans-serif; }
 
@@ -59,3 +42,12 @@ p {
   width: 30px;
   text-align: center;
   font-size: 15px; }
+
+.text-box {
+  width: 75px;
+  font-family: 'Source Sans Pro, sans-serif';
+  text-align: center; }
+
+.testing-class {
+  color: black;
+  font-size: 10px; }
